--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </form>
             </div>
         </div>
-        <div class="primary-chart group">
+        <div class="primary-chart">
             <div class="alert"> 
                 <p class="alert-message">Alert Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 <i class="fa fa-window-close alert-message" aria-hidden="true"></i>
@@ -133,11 +133,11 @@
         <div class="charts">
             <div class="daily-traffic">
                 <h3>Daily Traffic</h3>
-                <canvas id="daily-traffic-chart" width="300" height="300"></canvas>
+                <canvas id="daily-traffic-chart" ></canvas>
             </div>
             <div class="mobile-users">
                 <h3>Mobile Users</h3>
-                <canvas id="mobile-users-chart" width="300" height="300"></canvas>
+                <canvas id="mobile-users-chart" ></canvas>
             </div>
         </div>
         <div class="social-container">
